feat: add tarefa 2 temporizador fix: Consertar readme

--- a/tarefa1_temporizador_U4C5/wokwi.toml
+++ b/tarefa1_temporizador_U4C5/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/tarefa_clock_U4C5.uf2'
-elf = 'build/tarefa_clock_U4C5.elf'
+firmware = 'build/tarefa1_temporizador_U4C5.uf2'
+elf = 'build/tarefa1_temporizador_U4C5.elf'
