--- a/tarefa2_temporizador_U4C5/CMakeLists.txt
+++ b/tarefa2_temporizador_U4C5/CMakeLists.txt
@@ -28,36 +28,37 @@ set(PICO_BOARD pico_w CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(tarefa1_temporizador_U4C5 C CXX ASM)
+project(tarefa2_temporizador_U4C5 C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(tarefa1_temporizador_U4C5 tarefa1_temporizador_U4C5.c )
+add_executable(tarefa2_temporizador_U4C5 tarefa2_temporizador_U4C5.c )
 
-pico_set_program_name(tarefa1_temporizador_U4C5 "tarefa1_temporizador_U4C5")
-pico_set_program_version(tarefa1_temporizador_U4C5 "0.1")
+pico_set_program_name(tarefa2_temporizador_U4C5 "tarefa2_temporizador_U4C5")
+pico_set_program_version(tarefa2_temporizador_U4C5 "0.1")
 
 # Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(tarefa1_temporizador_U4C5 1)
-pico_enable_stdio_usb(tarefa1_temporizador_U4C5 1)
+pico_enable_stdio_uart(tarefa2_temporizador_U4C5 1)
+pico_enable_stdio_usb(tarefa2_temporizador_U4C5 1)
 
 # Add the standard library to the build
-target_link_libraries(tarefa1_temporizador_U4C5
+target_link_libraries(tarefa2_temporizador_U4C5
         pico_stdlib)
 
 # Add the standard include files to the build
-target_include_directories(tarefa1_temporizador_U4C5 PRIVATE
+target_include_directories(tarefa2_temporizador_U4C5 PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}
 )
 
 # Add any user requested libraries
-target_link_libraries(tarefa1_temporizador_U4C5
+target_link_libraries(tarefa2_temporizador_U4C5
         hardware_timer
+        hardware_clocks
 
         )
 
-pico_add_extra_outputs(tarefa1_temporizador_U4C5)
+pico_add_extra_outputs(tarefa2_temporizador_U4C5)
 
